--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html
         button.navbar-toggler.navbar-toggler-right(type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation")
           span.navbar-toggler-icon
 
-        a.navbar-brand(href="#") RobotSlam
+        a.navbar-brand(href="/") RobotSlam
 
         div.collapse.navbar-collapse#navbarNavAltMarkup
 
