Add start/stop buttons

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,4 +4,6 @@ block content
   h1= title
   p Welcome to #{title}
 
-  a.btn.btn-primary(href='/toggle') Start
+  a.btn.btn-primary(href='/toggle/start') Start
+  a.btn.btn-primary(href='/toggle/stop') Stop
+
