Add condition check for start/stop

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,10 @@ block content
   h1= title
   p Welcome to #{title}
 
-  a.btn.btn-primary(href='/toggle/start') Start
-  a.btn.btn-primary(href='/toggle/stop') Stop
+  #buttton
+    if active
+      a.btn.btn-primary(href='/toggle/stop') Stop
+    else
+      a.btn.btn-primary(href='/toggle/start') Start
+
 
