--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,16 +6,16 @@ html
   body
 
     nav.navbar.navbar-toggleable-md.fixed-top.navbar-inverse.bg-primary
-      div.container
-        button.navbar-toggler.navbar-toggler-right(type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation")
+      button.navbar-toggler.navbar-toggler-right(type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation")
           span.navbar-toggler-icon
-
+      div.container
         a.navbar-brand(href="/") RobotSlam
-
         div.collapse.navbar-collapse#navbarNavAltMarkup
-
-        div.navbar-nav
-          a.nav-item.nav-link.active(href="#") Home
+          ul.navbar-nav.mr-auto
+            li.nav-item
+              a.nav-link.active(href="/") Home
+            li.nav-item
+              a.nav-link(href="/gps_convert") GPS Convert
 
     div.container#main
       block content
