Add favicon and logo

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,13 +3,15 @@ html
   head
     title= title
     //link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="icon" href="favicon.png")
   body
 
     nav.navbar.navbar-toggleable-md.fixed-top.navbar-inverse.bg-primary
       button.navbar-toggler.navbar-toggler-right(type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation")
           span.navbar-toggler-icon
       div.container
-        a.navbar-brand(href="/") RobotSlam
+        a.navbar-brand(href="/")
+          .logo
         div.collapse.navbar-collapse#navbarNavAltMarkup
           ul.navbar-nav.mr-auto
             li.nav-item
