--- a/views/gps_convert/fit_on_map.pug
+++ b/views/gps_convert/fit_on_map.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   h1= title
-  //.hidden
-  img#map-image(src=map_image_data)
+  div(hidden='hidden')
+    img#map-image(src=map_image_data, data-gps-references=gps_references, data-origin=origin, data-resolution=resolution)
   #map
   a.btn.btn-secondary#move-to-center(href='#') Move map to center
