--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,4 +22,7 @@ html
     div.container#main
       block content
 
+    script(src='https://maps.micello.com/leaflet/1.0.0/leaflet.js')
+    script(src='https://maps.micello.com/sdk/leaflet/v1/micellomap.js')
     script(src='/js/bundle.js')
+
