Fix template for gps convert upload form. Add accept attribute to limit file types.

--- a/views/gps_convert/index.pug
+++ b/views/gps_convert/index.pug
@@ -3,18 +3,14 @@ extends ../layout
 block content
   h1= title
   form(method='post' enctype='multipart/form-data' action='gps_convert/fit_on_map')
-    .form-group.row
-      .col-sm-10
-        label Map image (.pgm)
-      .col-sm-10
-        input(type='file' name='map_image')
+    .form-group
+      label Map image (.pgm)
+      input.form-control-file(type='file' name='map_image', accept=".pgm")
 
-    .form-group.row
-      .col-sm-10
-        label Map description (.yaml)
-      .col-sm-10
-        input(type='file' name='map_description')
+    .form-group
+      label Map description (.yaml)
+      input.form-control-file(type='file' name='map_description', accept='.yaml')
 
-    .form-group.row
+    .form-group
       button.btn.btn-primary(type="submit") Upload
 
