--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,9 @@ html
             li.nav-item
               a.nav-link.active(href="/") Home
             li.nav-item
-              a.nav-link(href="/gps_convert") GPS Convert
+              a.nav-link.active(href="/gps_convert") GPS Convert
+            li.nav-item
+              a.nav-link.active(href="/export") Export
 
     div.container#main
       block content
