--- a/views/gps_convert/fit_on_map.pug
+++ b/views/gps_convert/fit_on_map.pug
@@ -6,7 +6,8 @@ block content
     img#map-image(src=map_image_data, data-gps-references=gps_references, data-origin=origin, data-resolution=resolution)
   #map
 
-  form#map-submit
+  form#map-submit(method='post', action='/gps_convert/download')
+    textarea.form-control(name='file')= yaml
     input.form-control(name='coordinates', type='hidden')
     .form-group
       input.btn.btn-primary(type='submit', value='Submit Map')
