--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,18 +8,18 @@ html
 
     nav.navbar.navbar-toggleable-md.fixed-top.navbar-inverse.bg-primary
       button.navbar-toggler.navbar-toggler-right(type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation")
-          span.navbar-toggler-icon
+        span.navbar-toggler-icon
       div.container
         a.navbar-brand(href="/")
           .logo
         div.collapse.navbar-collapse#navbarNavAltMarkup
           ul.navbar-nav.mr-auto
-            li.nav-item
-              a.nav-link.active(href="/") Home
-            li.nav-item
-              a.nav-link.active(href="/gps_convert") GPS Convert
-            li.nav-item
-              a.nav-link.active(href="/export") Export
+            li.nav-item(class=title == 'Express' ? 'active' : '')
+              a.nav-link(href="/") Home
+            li.nav-item(class=title == 'GPS Convert Upload' ? 'active' : '')
+              a.nav-link(href="/gps_convert") GPS Convert
+            li.nav-item(class=title == 'Export' ? 'active' : '')
+              a.nav-link(href="/export") Export
 
     div.container#main
       block content
