Move routes into seperate file

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html
           .logo
         div.collapse.navbar-collapse#navbarNavAltMarkup
           ul.navbar-nav.mr-auto
-            li.nav-item(class=title == 'Express' ? 'active' : '')
+            li.nav-item(class=title == 'Robotslam' ? 'active' : '')
               a.nav-link(href="/") Home
             li.nav-item(class=title == 'GPS Convert Upload' ? 'active' : '')
               a.nav-link(href="/gps_convert") GPS Convert
