--- a/views/measurements/index.pug
+++ b/views/measurements/index.pug
@@ -7,12 +7,14 @@ block content
     thead
       tr
         th #
+        th # measurements
         th Collected At
         th
     tbody
       each m in measurements
         tr
           td= m.id
+          td= m.items
           td= m.created_at
           td
             a.btn.btn-outline-primary(href=`/measurements/${m.id}/export`) Export
