Add building, create building and view building.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,6 +16,8 @@ html
           ul.navbar-nav.mr-auto
             li.nav-item(class=title == 'Robotslam' ? 'active' : '')
               a.nav-link(href="/") Home
+            li.nav-item(class=title == 'Buildings' ? 'active' : '')
+              a.nav-link(href="/buildings") Buildings
             li.nav-item(class=title == 'Measurements' ? 'active' : '')
               a.nav-link(href="/measurements") Measurements
             li.nav-item(class=title == 'GPS Convert Upload' ? 'active' : '')
