Add view map page

--- a/public/src/style.scss
+++ b/public/src/style.scss
@@ -22,3 +22,12 @@ body {
   margin-bottom: 15px;
 }
 
+#map-image {
+  width: 350px;
+  display: block;
+  border: 1px solid #ccc;
+
+  img {
+    width: 100%;
+  }
+}
