--- a/views/buildings/view.pug
+++ b/views/buildings/view.pug
@@ -17,3 +17,5 @@ block content
           td= m.created_at
           td
             a.btn.btn-outline-primary(href=`/buildings/${building.id}/maps/${m.id}`) View
+
+  a.btn.btn-primary(href=`/buildings/${building.id}/explore`) Start new exploration
