--- a/views/measurements/index.pug
+++ b/views/measurements/index.pug
@@ -7,14 +7,16 @@ block content
     thead
       tr
         th #
-        th # measurements
+        th Map
+        th Building
         th Collected At
         th
     tbody
       each m in measurements
         tr
           td= m.id
-          td= m.items
+          td= m.map.name
+          td= m.map.building.name
           td= m.created_at
           td
             a.btn.btn-outline-primary(href=`/measurements/${m.id}/export`) Export
