--- a/views/maps/view.pug
+++ b/views/maps/view.pug
@@ -13,13 +13,16 @@ block content
           li= `Height: ${map.height}`
           li= `Resolution: ${map.resolution}`
           li= `Origin: (${map.origin_x} ${map.origin_y} ${map.origin_yaw})`
-          li Reference points:
-            ul
-              li= `TopLeft: ${map.ref_topleft.coordinates[0]}, ${map.ref_topleft.coordinates[1]}`
-              li= `TopRight: ${map.ref_topright.coordinates[0]}, ${map.ref_topright.coordinates[1]}`
-              li= `BottomLeft: ${map.ref_bottomleft.coordinates[0]}, ${map.ref_bottomleft.coordinates[1]}`
+          if map.ref_topleft != null
+            li Reference points:
+              ul
+                li= `TopLeft: ${map.ref_topleft.coordinates[0]}, ${map.ref_topleft.coordinates[1]}`
+                li= `TopRight: ${map.ref_topright.coordinates[0]}, ${map.ref_topright.coordinates[1]}`
+                li= `BottomLeft: ${map.ref_bottomleft.coordinates[0]}, ${map.ref_bottomleft.coordinates[1]}`
 
-        a.btn.btn-outline-primary(href=`/maps/${map.id}/update`) Edit reference points
+        .btn-group
+          a.btn.btn-outline-primary(href=`/maps/${map.id}/update`) Edit reference points
+          a.btn.btn-outline-success(href=`/maps/${map.id}/yaml`) Download Yaml file
 
   h2 Measurements
 
