--- a/views/maps/fit_on_map.pug
+++ b/views/maps/fit_on_map.pug
@@ -8,9 +8,10 @@ block content
 
   #map
 
-  form#map-submit(method='post', action='/maps/9')
-    input.form-control(name='coordinates', type='hidden')
-    .form-group
-      .btn-group
-        input.btn.btn-primary(type='submit', value='Update reference points')
-        a.btn.btn-secondary#move-to-center(href='#') Move map to center
+  form#map-submit(method='post', action=`/maps/${map.id}`)
+    .container
+      input.form-control(name='coordinates', type='hidden')
+      .form-group
+        .btn-group
+          input.btn.btn-primary(type='submit', value='Update reference points')
+          a.btn.btn-secondary#move-to-center(href='#') Move map to center
