Cleaned up menu.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,12 +18,12 @@ html
               a.nav-link(href="/") Home
             li.nav-item(class=title == 'Buildings' ? 'active' : '')
               a.nav-link(href="/buildings") Buildings
-            li.nav-item(class=title == 'Measurements' ? 'active' : '')
-              a.nav-link(href="/measurements") Measurements
-            li.nav-item(class=title == 'GPS Convert Upload' ? 'active' : '')
-              a.nav-link(href="/gps_convert") GPS Convert
-            li.nav-item(class=title == 'Export' ? 'active' : '')
-              a.nav-link(href="/export") Export
+            //li.nav-item(class=title == 'Measurements' ? 'active' : '')
+            //  a.nav-link(href="/measurements") Measurements
+            //li.nav-item(class=title == 'GPS Convert Upload' ? 'active' : '')
+            //  a.nav-link(href="/gps_convert") GPS Convert
+            //li.nav-item(class=title == 'Export' ? 'active' : '')
+            //  a.nav-link(href="/export") Export
 
     div.container#main
       block content
