Add gray background to map.

--- a/public/src/style.scss
+++ b/public/src/style.scss
@@ -29,6 +29,7 @@ body {
   width: 350px;
   display: block;
   border: 1px solid #ccc;
+  background-color: whitesmoke;
 
   img {
     width: 100%;
