Add ExtractTextPlugin to webpack, which places css inside a css file.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    link(rel="stylesheet" href="/js/style.css")
     link(rel="icon" href="favicon.png")
   body
 
