Fix favicon not working due to wrong url

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ html
   head
     title= title
     link(rel="stylesheet" href="/js/style.css")
-    link(rel="icon" href="favicon.png")
+    link(rel="icon" href="/favicon.png")
   body
 
     nav.navbar.navbar-toggleable-md.fixed-top.navbar-inverse.bg-primary
