Fix measurement table not working correctly

--- a/views/measurements/index.pug
+++ b/views/measurements/index.pug
@@ -15,14 +15,8 @@ block content
       each m in measurements
         tr
           td= m.id
-          td= m.map.name
-          td= m.map.building.name
+          td= m.map ? m.map.name : ''
+          td= m.map && m.map.building ? m.map.building.name : ''
           td= m.created_at
           td
             a.btn.btn-outline-primary(href=`/measurements/${m.id}/export`) Export
-
-  #buttton
-    if active
-      a.btn.btn-primary(href='/toggle/stop') Stop
-    else
-      a.btn.btn-primary(href='/toggle/start') Start
