Add edit buildings. Fix styling for edit and more.

--- a/views/buildings/index.pug
+++ b/views/buildings/index.pug
@@ -19,4 +19,4 @@ block content
           td= b.name
           td= moment(b.created_at).format('ll')
           td
-            a.btn.btn-outline-primary(href=`/buildings/${b.id}`) View
+            a.btn.btn-sm.btn-outline-primary(href=`/buildings/${b.id}`) View
