--- a/public/src/style.scss
+++ b/public/src/style.scss
@@ -5,6 +5,10 @@ body {
   padding-top: 5rem;
 }
 
+h1 .btn {
+  margin-left: 10px;
+}
+
 .logo {
   display: block;
   background: url('./images/robot.png');
@@ -47,8 +51,4 @@ form#map-submit {
   .form-group {
     margin: 0;
   }
-}
-
-th.actions {
-
 }
