--- a/views/maps/view.pug
+++ b/views/maps/view.pug
@@ -1,7 +1,8 @@
 extends ../layout
 
 block content
-  h1= `Viewing ${map.name}`
+  h1= map.name
+    a.btn.btn-sm.btn-outline-secondary(href=`/maps/${map.id}/edit`) Edit
 
   .row
     .col.col-6
