Add error message if data cannot be transformed. Remove rename button.

--- a/views/maps/view.pug
+++ b/views/maps/view.pug
@@ -23,8 +23,7 @@ block content
 
         .btn-group
           a.btn.btn-outline-primary(href=`/maps/${map.id}/update`) Edit reference points
-          a.btn.btn-outline-primary(href=`/maps/${map.id}/edit`) Rename
-          a.btn.btn-outline-success(href=`/maps/${map.id}/yaml`) Download Yaml file
+          a.btn.btn-outline-success(href=`/maps/${map.id}/yaml`) Download Yaml
 
   h2 Measurements
     a.btn.btn-primary.float-right(href=`/maps/${map.id}/toggle`)
@@ -45,4 +44,3 @@ block content
             .btn-group
               a.btn.btn-sm.btn-outline-primary(href=`/measurements/${m.id}`) View
               a.btn.btn-sm.btn-outline-primary(href=`/measurements/${m.id}/export`) Export
-
