More style improvements

--- a/public/src/style.scss
+++ b/public/src/style.scss
@@ -40,7 +40,7 @@ h1 .btn {
   }
 }
 
-form#map-submit {
+form#map-submit, .map-bottom {
   background-color: desaturate(#0275d8, 75%);
   position: fixed;
   right: 0;
