--- a/views/maps/fit_on_map.pug
+++ b/views/maps/fit_on_map.pug
@@ -15,3 +15,5 @@ block content
         .btn-group
           input.btn.btn-primary(type='submit', value='Update reference points')
           a.btn.btn-secondary#move-to-center(href='#') Move map to center
+
+        a.btn.btn-secondary.float-right(href=`/maps/${map.id}`) Cancel
