Minor design improvements with button spacing. Add pretty print of html for dev env.

--- a/views/buildings/create.pug
+++ b/views/buildings/create.pug
@@ -9,3 +9,5 @@ block content
       input.form-control(type='text', name='name')
 
     input.btn.btn-primary(type='submit', value='Create building')
+    = ' '
+    a.btn.btn-secondary(href='/buildings') Cancel
