Work in progress.

--- a/public/src/style.scss
+++ b/public/src/style.scss
@@ -1,5 +1,6 @@
 @import "~bootstrap/scss/bootstrap.scss";
 @import "~leaflet/dist/leaflet.css";
+@import "./export.scss";
 
 body {
   padding-top: 5rem;
