--- a/views/measurements/export.pug
+++ b/views/measurements/export.pug
@@ -1,23 +1,14 @@
 extends ../layout
 
 block content
-  h1= title
-
-  p= `Exporting: ${measurement.id}`
-
-  form#form-visualize(method="post" enctype='multipart/form-data')
-    .form-group
-      label(for='map_description') Map description (.yaml)
-      input.form-control-file(type='file' id='map_description' name='map_description', accept='.yaml')
-    .form-group.row
-      .col
-        input.btn.btn-primary(type="submit", value="Download CSV")
-      .col
-        a#submit-visualize.btn.btn-secondary(href='#') Visualize
-
-  script(type='text/javascript').
-    document.querySelector('#submit-visualize').onclick = function () {
-      const form = document.querySelector('#form-visualize');
-      form.action = window.location.pathname + '/visualize';
-      form.submit();
-    };
+  .export-container
+    .container
+      .modal-dialog
+        .modal-content
+          .modal-header
+            h5= `Exporting measurement #${measurement.id}`
+          .modal-body
+            .progress
+              .progress-bar.progress-bar-striped.progress-bar-animated(data-max=points)
+          .modal-footer
+            button.btn.btn-primary(type="button") Start
