--- a/views/buildings/view.pug
+++ b/views/buildings/view.pug
@@ -10,8 +10,10 @@ block content
 
   h2
     | Maps
-    a.btn.btn-primary.float-right(href=`/buildings/${building.id}/explore`)
-      | #{active ? 'Stop exploration' : 'Start new exploration'}
+    if active
+      a.btn.btn-primary.float-right(href=`/buildings/${building.id}/explore`) Stop exploration
+    else
+      button.btn.btn-primary.float-right(data-toggle='modal' data-target='#exploreModal') Start new exploration
 
   table.table
     thead.thead-default
@@ -49,3 +51,23 @@ block content
           .modal-footer
             input.btn.btn-primary(type='submit', value='Save')
             button.btn.btn-secondary(type="button", data-dismiss="modal") Close
+
+  #exploreModal.modal.fade
+    form(method='post', action=`/buildings/${building.id}/explore`)
+      .modal-dialog(role='document')
+        .modal-content
+          .modal-header
+            h5.modal-title Exploration
+            button.close(type='button', data-dismiss='modal', aria-label='Close')
+              span(aria-hidden="true") &times;
+          .modal-body
+            .form-group
+              label Name
+              input.form-control(type='text', name='name')
+            .form-group
+              label Floor
+              input.form-control(type='text', name='floor')
+          .modal-footer
+            input.btn.btn-primary(type='submit', value='Start')
+            button.btn.btn-secondary(type="button", data-dismiss="modal") Close
+
