Remove unused view files

--- a/views/buildings/index.pug
+++ b/views/buildings/index.pug
@@ -3,7 +3,7 @@ extends ../layout
 block content
   h1
     | #{title}
-    button.btn.btn-primary.float-right(data-toggle='modal' data-target='#createModal') New building
+    a.btn.btn-primary.float-right(href='#', data-toggle='modal', data-target='#createModal') New building
 
   table.table
     thead.thead-default
