--- a/views/maps/view.pug
+++ b/views/maps/view.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   h1= map.name
-    button.btn.btn-sm.btn-outline-secondary(data-toggle='modal' data-target='#editModal') Edit
+    a.btn.btn-sm.btn-outline-secondary(href='#', data-toggle='modal', data-target='#editModal') Edit
 
   .row
     .col.col-6
