--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,5 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
-
+  p Welcome to #{title}, to get started click <a href="/buildings">Buildings</a> in the Menu.
 
