--- a/views/maps/fit_on_map.pug
+++ b/views/maps/fit_on_map.pug
@@ -13,7 +13,7 @@ block content
       input.form-control(name='coordinates', type='hidden')
       .form-group
         .btn-group
-          input.btn.btn-primary(type='submit', value='Update reference points')
+          input.btn.btn-primary(type='submit', value='Save reference points')
           a.btn.btn-secondary#move-to-center(href='#') Move map to center
 
         a.btn.btn-secondary.float-right(href=`/maps/${map.id}`) Cancel
